Fri Jun 08 08:17:15 2001  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_SOCK_Stream.i (send_i, recv_i):

	  Fixed "fuzz" errors.

Fri Jun 08 07:33:03 2001  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_SOCK_Stream.cpp (send):

	  Fixed an "unused argument" warning.

Fri Jun 08 07:01:59 2001  Ossama Othman  <ossama@uci.edu>

	* ace/SSL/SSL_Accept_Handler.h:
	* ace/SSL/SSL_Accept_Handler.cpp:
	* ace/SSL/SSL_Connect_Handler.h:
	* ace/SSL/SSL_Connect_Handler.cpp:

	  New event handlers that are designed to complete non-blocking
	  SSL passive (accepts) and active connections (connects).  They
	  are registered with the Reactor (either the singleton Reactor or
	  a user-supplied one) after the TCP 3-way handshake is
	  completed.  Once registered, the Reactor does its voodoo and
	  invokes the appropriate event handler.

	  This fixes several inter-related problems:
	    (1) the ACE_SSL wrappers now work with the
	        ACE_WFMO_Reactor,   [Bug 614]
	    (2) non-blocking SSL accepts/connects and finally work,
	    (3) fixes a CORBA::TRANSIENT exception in TAO's SSLIOP
	        pluggable protocol that occured when the client attempted
	        to connect to the server.

	  Thanks to Andrew Finnell <Andrew.Finnell@esecurityinc.com> for
	  suggesting that an event loop was necessary to complete the SSL
	  connection after 3-way handshake was necessary, and for
	  persisting in his effort to hammer that point into me.  :-)

	* ace/SSL/SSL_SOCK_Stream.h (send_i, recv_i):

	  New low-level helper methods that refactor the common underlying
	  SSL IO calls.

	* ace/SSL/SSL_SOCK_Stream.i (send):

	  Fixed problem where one of the low-level send() methods returned
	  zero instead of the number of bytes sent.  Thanks to Boris
	  Temkin <borist@allcharge.com> and Dan Levi <DanL@webmap.com> for
	  reporting the problem.

	  (send_i, recv_i):

	  Refactored code common to all send()/recv() methods.  Thanks to
	  Boris for suggesting this.  This will help prevent problems such